--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -6730,7 +6730,7 @@ a.text-dark:hover, a.text-dark:focus {
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
-  background-color: transparent;
+  background-color: transparent; 
   border: 0; }
 
 .visible {
@@ -11033,6 +11033,16 @@ table.dataTable thead .sorting::after {
 
 .btn-rounded {
   border-radius: 60px; }
+
+  .btn-circle{
+    width: 30px;
+    height: 20px;
+    padding: 6px 2px;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: center;
+    border-radius: 25px;
+  }  
 
 .btn-icon-right {
   border-left: 1px solid rgba(120, 130, 140, 0.13);
