--- a/assets/template/css/style.css
+++ b/assets/template/css/style.css
@@ -75,6 +75,9 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   border: 1px solid #223a66;
 }
 
+.input-rounded {
+  border-radius: 100px; }
+  
 .label {
   padding: 7px 10px;
   line-height: 15px;
